# Quantum-Experiment

./: .graphifyignore  50_EVERYDAY_USE_CASES.md  ABOUT.md  AUTONOMOUS_SYSTEM_GUIDE.md  BEGINNERS_GUIDE.py  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_BENCHMARK_RESULTS.txt  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  FAQ.md  FEATURES.md  FINAL_PROJECT_SUMMARY.py  FINAL_PUBLICATION_REPORT.md  FINAL_SETUP_SCHEDULED_TASK.ps1  FINAL_STATUS_REPORT.txt  GITHUB_RELEASE_GUIDE.md  GITHUB_WORKFLOWS_FIXED.md  GRAPHIFY_INTEGRATION.md  GRAPHIFY_INTEGRATION_COMPLETE.txt  IMPROVEMENTS_COMPLETED.md  INSTALLATION.md  INSTALLER_README.md  LICENSE  MANUAL_RELEASE_GUIDE.md  PLATFORM_CAPABILITIES_ANALYSIS.md  PUBLICATION_CERTIFICATE.txt  PUBLICATION_COMPLETE.txt  PUBLICATION_COMPLETE_100PERCENT.txt  PUBLICATION_COMPLETE_SUMMARY.txt  PUBLICATION_GUIDE.md  PUBLICATION_STATUS.md  QUICKSTART.md  QUICK_START_AUTOMATION.md  README.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_GUIDE_v2.0.py  TESTING_AND_IMPROVEMENTS.md  WINDOWS_AUTOMATION_SETUP.md  (+42 more)
.github/: copilot-instructions.md
.github/workflows/: auto-improve.yml  benchmarks.yml  build.yml  docs.yml  tests.yml
QuantumExperiment_Distribution/: BEGINNERS_GUIDE.py
graphify-out/: GRAPH_REPORT.md  graph-visualization.html  graph.json
scripts/: analyze_code_quality.py  performance_profiler.py  run_improvements.py
tests/: __init__.py  conftest.py  test_circuit_types.py  test_measurement_analysis.py  test_scalable_simulator.py
